<resources>
    <string name="app_name">Demo Health Gateway</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_pulse_oximeter">Pulse oximeter</string>
    <string name="devices">Devices</string>
    <string name="show_device">Use chosen device</string>
    <string name="warning_choose_device">Please choose a device first.</string>
    <string name="agent_config_failed">Agent configuration failed.</string>
    <string name="health_service_disconnected">HealthService was disconnected.</string>
    <string name="ready_to_receive">Ready to receive incoming connections</string>
    <string name="saturation">SPO2: </string>
    <string name="heart_rate"> Heart rate: </string>
    <string name="receiving_measurement">Receiving measurement…</string>
    <string name="settings_patient_name">Patient identification</string>
    <string name="settings_save">Save settings</string>
    <string name="health_device_is_no_health_device">Your health device is not a health device.</string>
    <string name="no_measurement_yet">No measurement taken..</string>
    <string name="upload_interrupted">Upload was interrupted..</string>
    <string name="upload_error">Something went wrong while uploading..</string>
    <string name="upload_timeout">Upload timed out..</string>
    <string name="upload_success">Successfully uploaded measurement!</string>
    <string name="upload_fail">Failed to upload measurement.</string>
    <string name="action_upload">Upload measurements</string>
    <string name="uploading_measurements">Uploading measurements %1$d/%2$d</string>
    <string name="uploading_measurements_start">Uploading measurements</string>
    <string name="seed_database">Seed database</string>
    <string name="seed_amount">Number of new elements:</string>
    <string name="seed_button">Seed!</string>
    <string name="seeding_done">Successfully added %1$d measurements to the database!</string>
    <string name="settings_saved">Settings saved!</string>
    <string name="license_text">This application was developed as part of a master\'s thesis at Chalmers University of Technology in cooperation with Ascom Wireless Solutions, and it is licensed under GNU GPL 2, © Andreas Svanström. This application uses the Antidote library © Signove Tecnologia S/A, which is licensed under the GNU LGPL 2.1.</string>
    <string name="lgpl_button">Show LGPL 2.1</string>
    <string name="license">License</string>
    <string name="settings_automatic_program_flow">Automatic program flow</string>
    <string name="gpl_button">Show GPL 2</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_license">License Information</string>
</resources>
